@@ -4,6 +4,8 @@ package edu.colorado.phet.sugarandsaltsolutions.micro.model;
 import java.awt.Shape;
 import java.awt.geom.Rectangle2D;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.Iterator;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
@@ -130,5 +132,17 @@ public class Compound extends Particle implements Iterable<Constituent> {
     //Removes the specified constituent from the compound
     public void removeConstituent( Constituent constituent ) {
         constituents.remove( constituent );
+    }
+
+    //From among the constituents, choose one near the edge that would be good to release as part of a dissolving process
+    //Note that since the lattice can take the shape of an arc, this can still leave orphaned particles floating in the air.  This should probably be resolved
+    public Constituent getConstituentToDissolve() {
+        ArrayList<Constituent> c = new ArrayList<Constituent>( constituents );
+        Collections.sort( c, new Comparator<Constituent>() {
+            public int compare( Constituent o1, Constituent o2 ) {
+                return Double.compare( o1.particle.position.get().getY(), o2.particle.position.get().getY() );
+            }
+        } );
+        return c.get( c.size() - 1 );
     }
 }
