@@ -1,3 +1,4 @@
+Micro tab: Improvements for crystal dissolving
 Micro tab: Factored out strategy pattern for crystal dissolving
 # 0.00.70 (54480) Jul 25, 2011
 Micro tab: Changed kit 1 "sugar" and "salt" to read "sucrose" and "sodium chloride" with formulae as in the other kits
